# Termux-ESP-Flasher

./: .gitignore  README.md  cdc_reset.py  nrflash  nrflash.py  pyproject.toml  rom_loader.py  stub_flasher_data.py  uart_reset.py  usb_device.py
.github/workflows/: python-publish.yml
src/nrflash/: __init__.py  cdc_reset.py  cli.py  rom_loader.py  uart_reset.py  usb_device.py
